# Innoprog_final_project

./: .gitignore  pyproject.toml
configs/: Telco_churn_config.py  cv_and_nlp_config.py  telco_churn_config.py
src/telco_churn/: clustering.py  dataset.py  model_factory.py  predict.py  preprocessor.py  trainer.py  tuning.py  utils.py  visualisation.py
src/telco_churn/classification/: calibration.py  classification_pipeline_steps.py  threshold.py  train_pipeline_classification.py
src/telco_churn/data/: oof_generator.py
src/telco_churn/dataset/: dataset.py  encode_target.py  oof_generator.py
src/telco_churn/datasets/: dataset_loader.py  oof_generator.py
src/telco_churn/experiments/: train_pipeline_classification.py  train_pipeline_regression.py
src/telco_churn/inference/: artifacts_loader.py  predictor.py
src/telco_churn/pipelines/: classification_pipeline_steps.py  preprocessor.py  regression_pipeline_steps.py  tuning.py
src/telco_churn/scripts/: train_pipeline_clustering.py  train_pipeline_regression.py
src/telco_churn/training/: train_pipeline_classification.py  trainer.py  tuning.py
